--- a/src/styles/components/Footer.scss
+++ b/src/styles/components/Footer.scss
@@ -9,6 +9,9 @@ footer {
   flex-wrap: wrap;
   gap: 4em;
 
+
+  
+
   @media (max-width: 800px) {
     justify-content: center;
     flex-direction: column;
@@ -18,6 +21,22 @@ footer {
     display: flex;
     gap: 0.5em;
     flex-direction: column;
+    width: 50%;
+
+    @media(max-width:1000px){
+      align-items: center;
+      text-align: center;
+      width:80%
+    }
+
+      #footer-tot{
+      width:25%;
+      
+      @media(max-width:650px){
+        width: 50%;
+      }
+  }
+
   }
 
   .map-container {
