--- a/src/styles/components/Header.scss
+++ b/src/styles/components/Header.scss
@@ -1,10 +1,24 @@
 .top {
+  position: relative;
+  overflow: hidden;
   background: var(--blue);
   padding: 3em;
   justify-content: center;
   align-items: center;
   display: flex;
   align-items: center;
+
+  #header-tot{
+    background-color:rgba($color: #afadad, $alpha: 0.5) ;
+    position: relative;
+    z-index: 2;
+    width: 20%;
+
+    @media(max-width: 650px){
+      width:50%
+    }
+
+  }
 
   .svg-container {
     opacity: 0;
@@ -45,6 +59,8 @@
 }
 
 nav {
+  position: relative;
+  z-index: 2;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -72,7 +88,8 @@ nav {
 }
 
 .hero {
-  background-image: url("../../assets/nature.jpg");
+  background-image: url("../../assets/lake.jpg");
+  position: absolute;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
