--- a/src/styles/Downloads.scss
+++ b/src/styles/Downloads.scss
@@ -3,24 +3,27 @@
 @import "./components/Footer.scss";
 
 main {
-  z-index: 2;
+  z-index: 99;
   padding: 2em;
+  background-color: var(--offWhite);
 
-  h2 {
-    text-align: center;
-    background-color: var(--offWhite);
-    width: 100%;
-  }
 
   .download-links {
-    z-index: 3;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     padding: 3em;
+    // margin: 2em;
     gap: 2em;
     opacity: 0;
     transition: 2s;
+
+    h2 {
+      text-align: center;
+      background-color: var(--offWhite);
+      width: 100%;
+    
+    }
 
 
     div {
