--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,11 +14,11 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<meta property="og:title" content="Town Of Triangle"/>
 		<meta property="og:description" content="Welcome to the Town of Triangle."/>
-		<meta property="og:image" content="/assets/new-tot.png"/>
+		<meta property="og:image" content="https://www.townoftriangle.org/assets/new-tot.png"/>
 		<meta property="og:url" content="https://www.townoftriangle.org/"/>
 		<meta property="og:type" content="website" />
 
-		<link rel="icon" type="image/png" href="/assets/new-tot.png" />
+		<link rel="icon" type="image/png" href="https://www.townoftriangle.org/assets/new-tot.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
