slew of updates announcments and meeting mins

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -85,6 +85,7 @@ main {
     }
 
     .announcment{
+      color: white;
       padding-left: 11em;
       padding-right: 11em;
       font-weight: 300;
