--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -92,6 +92,13 @@ main {
       font-size: 1.5em;
       padding-bottom: 2em;
       text-align: center;
+      transition: all .3s;
+
+      &:hover{
+        color: lightblue;
+        transform: scale(1.05);
+      }
+
       @media (max-width: 1200px) {
         padding-left: 5em;
         padding-right: 5em;
