updated emails and docs

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,6 +18,13 @@ const { title } = Astro.props;
 		<meta property="og:url" content="https://www.townoftriangle.org/"/>
 		<meta property="og:type" content="website" />
 
+		<!-- Google Search -->
+		<meta name="title" content="Town Of Triangle">
+		<meta name="description" content="Welcome to the Town of Triangle">
+
+		<!-- Favicon -->
+		<link rel="icon" type="image/png" sizes="32x32" href="https://www.townoftriangle.org/assets/new-tot.png" />
+
 		<link rel="icon" type="image/png" href="https://www.townoftriangle.org/assets/new-tot.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
